LeanStock final project
